--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,14 +14,12 @@ builds:
     ldflags:
       - "-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}"
     goos:
-      - freebsd
+      # - freebsd # If you're using this provider with freebsd, open a PR
       - windows
       - linux
       - darwin
     goarch:
       - amd64
-      - "386"
-      - arm
       - arm64
     ignore:
       - goos: darwin
