--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   ci:
     #runs-on: ubuntu-latest
-    runs-on: cloud3b
+    runs-on: [self-hosted, cloud3b]
     steps:
       - name: CI
         uses: agilesyndrome/github-actions@fixup-ci
