--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
     #runs-on: [self-hosted, cloud3b]
     steps:
       - name: CI
-        uses: agilesyndrome/github-actions@875512a5374240fb18818db0894df30a4fbc171e
+        uses: agilesyndrome/github-actions@ffe21a1d8313f3056bb4e3cee2652399f64f59f4
         with:
           makefile_target: ci
-          action_version: fixup-ci
+          action_version: ffe21a1d8313f3056bb4e3cee2652399f64f59f4
 
